--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"bootstrap": "^4.3.1",
+		"jwt-decode": "^2.2.0",
 		"moment": "^2.24.0",
 		"node-sass": "^4.12.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-router-dom": "^5.0.0",
 		"react-scripts": "3.0.0",
 		"styled-components": "^4.2.0",
 		"tail.datetime": "^0.4.10"
@@ -23,7 +25,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
